--- a/.github/workflows/lambda-deploy.yml
+++ b/.github/workflows/lambda-deploy.yml
@@ -22,11 +22,11 @@ jobs:
         run: |
           aws lambda get-function --function-name lambda1 || echo "Function does not exist"
           echo "function-create=yes" >> "$GITHUB_OUTPUT"
-        outputs:
-          function-create: ${{ steps.check_lambda1_existence.outputs.function-create }}  
+        # outputs:
+        #   function-create: ${{ steps.check_lambda1_existence.outputs.function-create }}  
       # Create lambda1 function if it doesn't exist
       - name: Create Lambda Function
-        needs: check_lambda1_existence
+        # needs: check_lambda1_existence
         # if: steps.check_lambda1_existence.outputs.stdout == 'Function does not exist'
         if: ${{ steps.check_lambda1_existence.outputs.function-create == 'yes' }}
         run: |
@@ -41,7 +41,7 @@ jobs:
           echo "Moving to next step post creation of lamdba"
       # Update lambda1 function code
       - name: Update Lambda Function Code
-        needs: check_lambda1_existence
+        # needs: check_lambda1_existence
         if: ${{ steps.check_lambda1_existence.outputs.function-create != 'yes' }}
         run: |
           zip -j lambda1.zip ./src/index.js
